# Tawasolmap-Game-Building-Task

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
game_building/: __init__.py  consumers.py  decorators.py  manage.py  routing.py
game_building/apps/buildings/: apps.py  models.py  serializers.py  services.py
game_building/apps/buildings/migrations/: 0001_initial.py  0002_building_buildings_b_buildin_a134d0_idx_and_more.py
game_building/apps/players/: admin.py  apps.py  consumers.py  models.py  serializers.py  services.py  tasks.py
game_building/apps/players/migrations/: 0001_initial.py  0002_player_players_pla_usernam_5bba13_idx_and_more.py
game_building/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
